Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/Marketing_Cloud_Connection__mdt.object-meta.xml
<CustomObject>
    <description>Marketing Cloud API Connection Information</description>
    <label>Marketing Cloud Connection</label>
    <pluralLabel>Marketing Cloud Connections</pluralLabel>
</CustomObject>