Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/AT_CH_API_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>AT_CH_API_Subdomain__c</fullName>
    <label>AT CH API Subdomain</label>
    <length>70</length>
    <type>Text</type>
</CustomField>