Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/AT_CH_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>AT_CH_Client_Id__c</fullName>
    <label>AT CH Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>