Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/AT_CH_List_DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>AT_CH_List_DoubleOptIn__c</fullName>
    <label>AT CH List DoubleOptIn</label>
    <length>4</length>
    <type>Text</type>
</CustomField>