Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/CA_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>CA_Client_Id__c</fullName>
    <label>CA Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>