Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/CA_List_DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>CA_List_DoubleOptIn__c</fullName>
    <label>CA List DoubleOptIn</label>
    <length>4</length>
    <type>Text</type>
</CustomField>