Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/DE_API_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>DE_API_Subdomain__c</fullName>
    <label>DE API Subdomain</label>
    <length>70</length>
    <type>Text</type>
</CustomField>