Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/DE_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>DE_Client_Secret__c</fullName>
    <label>DE Client Secret</label>
    <length>30</length>
    <type>Text</type>
</CustomField>