Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/DE_List_DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>DE_List_DoubleOptIn__c</fullName>
    <label>DE List DoubleOptIn</label>
    <length>4</length>
    <type>Text</type>
</CustomField>