Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/GB_IE_API_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>GB_IE_API_Subdomain__c</fullName>
    <label>GB IE API Subdomain</label>
    <length>70</length>
    <type>Text</type>
</CustomField>