Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/GB_IE_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>GB_IE_Client_Id__c</fullName>
    <label>GB IE Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>