Prod-EU/force-app/main/default/objects/Marketing_Cloud_Connection__mdt/fields/GB_IE_List_DoubleOptIn__c.field-meta.xml
<CustomField>
    <fullName>GB_IE_List_DoubleOptIn__c</fullName>
    <label>GB IE List DoubleOptIn</label>
    <length>4</length>
    <type>Text</type>
</CustomField>